# tnn-with-iree

./: .gitignore  CMakeLists.txt  README.md
Dialect/: CMakeLists.txt  init_dialect.h  tnn_translate.cpp
Dialect/IR/: CMakeLists.txt  ConversionPatterns.cpp  ConversionPatterns.h  TnnBase.td  TnnDialect.cpp  TnnDialect.h  TnnDialect.td  TnnOps.td  tnn.imports.mlir
cmake/: iree_compile.cmake  mlir_tblgen.cmake
dialect/: init_dialect.h  tnn_translate.cpp
dialect/IR/: CMakeLists.txt  TnnDialect.cpp  TnnDialect.h  TnnOps.td  conversion_patterns.cpp  conversion_patterns.h  tnn.imports.mlir
model/: tnn_iree_mnist.mlir
runtime/: CMakeLists.txt  tnn_iree_runtime.cpp  tnn_module.cpp  tnn_module.h
runtime/modules/: CMakeLists.txt  tnn_module.cpp  tnn_module.h
